# heck

./: .gitignore  6171_Reasoning_Driven_Syntheti.md  AUDIT_REPORT.md  CPU_FORM300_DATA_FACTORY.md  Corrigendum 1 (1).md  DETECTIVE_ANALYSIS_REPORT.md  Executive Summary (2).md  FINAL_AUDIT_SUMMARY.md  LIC RFP-Proposal form data extraction_290126 (4).md  MASTER_PAGE_CATALOG.py  PIPELINE_STATUS.md  POLISHED_LABELING_STACK.md  Pre-Bid Responses - Proposal Form Data Extraction RFP (1).md  README.md  README_COMPLETE.md  SOTA_LIC_FORM300_STRATEGY.md  advanced_grouped_qwen_extract.py  advanced_paddle_pipeline.py  advanced_paddlex_pipeline.py  analyze_5_pdfs.py  analyze_result.py  analyze_samples.py  audit_pipeline.py  audit_registered_template_boxes.py  audit_results.py  auto_fill_gold.py  batch_process_all.py  benchmark_name_resolver.py  build_form300_cpu_dataset.py  build_polished_labeling_stack.py  build_real_training.py  build_synthetic.py  calibrate_coordinates.py  check_data.py  check_pdfs.py  debug_layout.py  debug_nemotron_boxes.py  detective_extraction.py  download_nemotron.py  download_nemotron_fixed.py  (+57 more)
frontend_app/frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend_app/frontend/app/: globals.css  layout.tsx  (+1 more)
nemotron_page_elements_v3/: .gitattributes  .gitignore  Demo.ipynb  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
output_advanced_paddlex/: EXTRACTION_SUMMARY.md  extraction_results.json
output_detective/: FINAL_detective_ground_truth.json  detective_ground_truth_in_progress.json
output_full_pipeline_p10/: FULL_PIPELINE_P10.json
output_nemotron_p10/: MASTER_UI_P10.json  NEMOTRON_PIPELINE_P10.json  RFP_FINAL_P10.json
src/: __init__.py  accuracy_pipeline.py  advanced_preprocessor.py  alien_pipeline.py  api.py  canonical_extractor.py  config.py  dataset_factory.py  dynamic_table_extractor.py  evaluate_metrics.py  extractor.py  field_mapper.py  field_mappings.py  fixed_form_registration.py  forensic_mapper.py  form300_templates.py  generate_pseudo_labels.py  geometric_segmenter.py  hindi_ocr.py  labeling_schema.py  layout_detector.py  layout_extractor.py  lic_encyclopedia.py  name_resolver.py  paddle_gpu_pipeline.py  paddle_ocr_engine.py  paddle_ocr_extractor.py  palantir_extractor.py  pipeline.py  polished_labeling.py  preprocessing.py  qwen_bbox_grounder.py  qwen_fallback.py  qwen_vl_extractor.py  sota_coordinate_slicer.py  sota_table_extractor.py  sota_template_extractor.py  surgical_field_taxonomy.py  table_parser.py  table_value_extractor.py  (+5 more)
src/pipeline/: __init__.py  master_pipeline.py  orchestrator.py  production_pipeline.py
src/pipeline_v2/: __init__.py
(+32 files in other folders)
